<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">
    <TextView
            android:text="@string/login_label"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"/>

    <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/input_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp"
            />
    <EditText
            android:id="@+id/input_number"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintStart_toEndOf="@id/input_number_country"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="phone"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="56dp"/>
    <EditText
            android:id="@+id/input_number_country"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/input_number"
            android:inputType="number"
            android:layout_marginTop="60dp"
            android:layout_marginStart="56dp"
            android:text="+7"/>
    <ImageView
            android:id="@+id/flag_number_country"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:src="@drawable/flag_rus"
            app:layout_constraintTop_toBottomOf="@id/text"
            android:layout_marginTop="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/input_number_country"/>
    <EditText
            android:id="@+id/input_code"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/input_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="number"
            android:layout_marginTop="60dp"
            android:maxLength="6"
            android:visibility="gone"
            android:hint="@string/login_code"/>
    <Button
            android:id="@+id/confirm_button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_number"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/login_button_number_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>